# smart-kiln

./: Readme.md
data_syncer/: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Readme.md  config.py  debug.py  gpio.py  main.py  metrics.py  program.py  program.txt  pyproject.toml  state.py  state.txt  temp.txt
data_syncer/firing_schedules/: 04DSDH_low_temp_drop_and_hold.txt  04DSDH_low_temp_drop_and_hold__dorodango.txt  04DSDH_low_temp_drop_and_hold__faster.txt  04DSDH_low_temp_drop_and_hold__slower.txt  bisque.txt  bisque__1000c.txt  bisque_candling.txt  bisque_candling__1000c.txt  bisque_candling__1260c.txt  bisque_fast__1000c.txt  bisque_slow__1000c.txt  dorodando_drying.txt  drying.txt
smart_kiln/: Readme.md
smart_kiln/src/: Adafruit_SPIDevice.h  Makefile  main.cpp  max31855.cpp  max31855.h  pid.cpp
