[tool.poetry]
name = "data-syncer"
version = "0.1.0"
description = ""
authors = ["h3nnn4n <git@h3nnn4n.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_syncer"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
opi-gpio = "^0.5.2"
python-decouple = "^3.7"
influxdb = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
